--- a/exercise-1/index.html
+++ b/exercise-1/index.html
@@ -28,7 +28,7 @@
                     <h2>My Name is</h2>
                 </div>
                 <div id="tag-center">
-                    James Bond
+                    Ishan Saksena
                 </div>
             </div>
         </section>
