--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -24,6 +24,34 @@
         <section>
             <div id="container">
                 <img src="imgs/mountain-range.jpeg" alt="green mountain range" />
+                
+                <div class="top left label">
+                    top left
+                </div>
+                <div class="top middle label">
+                    top middle
+                </div>
+                <div class="top right label">
+                    top right
+                </div>
+                <div class="center left label">
+                    center left
+                </div>
+                <div class="center middle label">
+                    center middle
+                </div>
+                <div class="center right label">
+                    center right
+                </div>
+                <div class="bottom left label">
+                    bottom left
+                </div>
+                <div class="bottom middle label">
+                    bottom middle
+                </div>
+                <div class="bottom right label">
+                    bottom right
+                </div>
             </div>
         </section>
     </main>
